tests/fixtures/invalid/pow_bool_bool_dict.py
# Cannot call pow() with Bool, Bool, Dict[str, int]
x = pow(True, True, {"a": 1})
